Create auth service
