# model/request/login_request.go
@@ -1,0 +1,6 @@
+package request
+
+type LoginRequest struct {
+	Username string `validate:"required" json:"username"`
+	Password string `validate:"required" json:"password"`
+}
