# model/response/login_response.go
@@ -1,0 +1,6 @@
+package response
+
+type LoginResponse struct {
+	JwtToken     string `json:"jwtToken"`
+	RefreshToken string `json:"refreshToken"`
+}
